# stock_thesis_lens

./: .claudignore  .gitignore  DEPLOY.md  VISION.md  docker-compose.yml  skills-lock.json
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml  requirements.txt  seed_demo.py
backend/app/: database.py  main.py
backend/app/agents/: explanation_agent.py  morning_briefing_agent.py  portfolio_chat_agent.py  quality_gate.py  signal_collector.py  signal_interpreter.py  thesis_chat_agent.py  thesis_evaluator.py  thesis_generator.py
backend/app/core/: auth.py  config.py  utils.py
backend/app/models/: __init__.py  briefing.py  chat.py  evaluation.py  investor_profile.py  portfolio.py  sell_trigger.py  share_token.py  stock.py  thesis.py  thesis_audit.py  user.py
backend/app/routers/: audit_log.py  auth.py  evaluate.py  investor_profile.py  market_data.py  portfolio.py  portfolios.py  sell_triggers.py  share.py  stocks.py  thesis.py
backend/app/schemas/: auth.py  evaluation.py  investor_profile.py  portfolio.py  stock.py  thesis.py
backend/app/services/: evaluation_service.py  profile_service.py  scheduler.py
backend/app/utils/: financial_datasets.py  fmp.py  market_snapshot.py  news.py  sec_edgar.py
backend/tests/: conftest.py  test_agents.py  test_briefing_cache.py  test_evaluate.py  test_quiz_round.py  test_sell_triggers.py  test_stocks.py  test_thesis.py  test_trend_labels.py
docs/: action_items.md  agents.md  arch_diagrams  architecture.md  claude_review.md  rafi.md  (+20 more)
simulation/: config.py  pyproject.toml  run_backtest.py  run_collect.py  run_studies.py  run_v2_validation.py
simulation/analysis/: portfolio_builder.py  regime.py  return_calculator.py  sector_cap.py  statistics.py
simulation/data/: __init__.py  cache.py  fmp_client.py  fundamental_fetcher.py  price_fetcher.py  sp500_sectors.json  sp500_tickers.txt
simulation/scoring/: config.py  scorer.py  signal_builder.py  thesis_templates.py
(+72 files in other folders)
