[project]
name = "stock-thesis-lens-backend"
version = "0.1.0"
description = "AI investment thesis evaluation backend"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "openai",
    "tavily-python",
    "langsmith",
    "httpx",
    "yfinance",
    "apscheduler>=3.11.2",
    "psycopg2-binary",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]
